--- a/package.json
+++ b/package.json
@@ -4,22 +4,37 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "android": "DARK_MODE=media expo start --android",
+    "ios": "DARK_MODE=media expo start --ios",
+    "web": "DARK_MODE=media expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.4.2",
+    "@gluestack-ui/actionsheet": "^0.2.46",
+    "@gluestack-ui/icon": "^0.1.25",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.16",
+    "@gluestack-ui/select": "^0.1.30",
+    "@gluestack-ui/toast": "^1.0.8",
+    "@legendapp/motion": "^2.4.0",
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.31",
     "expo-status-bar": "~2.0.1",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-css-interop": "^0.1.22",
     "react-native-pager-view": "6.5.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.2.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -28,6 +43,7 @@
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "jscodeshift": "^0.15.2",
     "prettier": "^3.4.2",
     "typescript": "^5.3.3"
   },
