feat: implement search function

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
     "@gluestack-ui/actionsheet": "^0.2.46",
+    "@gluestack-ui/button": "^1.0.8",
     "@gluestack-ui/icon": "^0.1.25",
+    "@gluestack-ui/input": "^0.1.32",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.16",
     "@gluestack-ui/select": "^0.1.30",
